--- a/attendnow/attendance/templates/attendance/about.html
+++ b/attendnow/attendance/templates/attendance/about.html
@@ -11,6 +11,6 @@
 <ul>
     <li>Gavin Middleton</li>
     <li>Muhamed El Majzoub</li>
-    <li>Jad Aoun (Team Leader)</li>
+    <li>Jad Aoun</li>
 </ul>
 {% endblock %}
