Added Weekly Attendance and fixed flow and styling

--- a/attendnow/attendance/templates/attendance/dashboard.html
+++ b/attendnow/attendance/templates/attendance/dashboard.html
@@ -114,7 +114,7 @@
                         <option value="{{ class.id }}">{{ class.name }}</option>
                     {% endfor %}
                 </select>
-                <button type="submit" name="submit_attendance" class="btn">Submit Attendance</button>
+                <button type="submit" name="submit_attendance" class="btn btn-primary btn-lg rounded-pill">Submit Attendance</button>
             </div>
         </form>
     </div>
@@ -126,7 +126,7 @@
             <div class="grid-container">
                 {{ add_class_form.name }}
             </div>
-            <button type="submit" name="add_class_organization" class="btn">Add</button>
+            <button type="submit" name="add_class_organization" class="btn btn-primary btn-lg rounded-pill">Add</button>
         </form>
     </div>
 </div>
