--- a/attendnow/attendance/templates/attendance/index.html
+++ b/attendnow/attendance/templates/attendance/index.html
@@ -42,8 +42,8 @@
     <div class="container">
         <h1>Welcome to AttendNow</h1>
         <p>This is the front page of the AttendNow app.</p>
-        <a href="{% url 'signin' %}" class="btn">Sign In</a>
-        <a href="{% url 'signup' %}" class="btn">Sign Up</a>
+        <a href="{% url 'signin' %}" class="btn btn-primary btn-lg rounded-pill">Sign In</a>
+        <a href="{% url 'signup' %}" class="btn btn-primary btn-lg rounded-pill">Sign Up</a>
     </div>
 </body>
 </html>
