--- a/attendnow/attendance/templates/attendance/submit_Attendance.html
+++ b/attendnow/attendance/templates/attendance/submit_Attendance.html
@@ -15,7 +15,7 @@
         <label for="date">Date:</label>
         <input type="date" id="date" name="date" required class="form-control">
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn-primary btn-lg rounded-pill">Submit</button>
 </form>
 <button id="facial-recognition-btn" class="btn btn-secondary">Use Facial Recognition</button>
 
