--- a/attendnow/attendance/templates/attendance/base.html
+++ b/attendnow/attendance/templates/attendance/base.html
@@ -6,6 +6,10 @@
     <title>{% block title %}AttendNow{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'attendance/styles.css' %}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
     <!-- Header section -->
@@ -18,6 +22,7 @@
                         <li><a href="{% url 'home' %}">Home</a></li>
                         {% if user.is_authenticated %}
                             <li><a href="{% url 'profile' %}">Profile</a></li>
+                            <li><a href="{% url 'weekly_attendance_view' %}">Weekly Attendance</a></li>
                             <li><a href="{% url 'logout' %}">Logout</a></li>
                         {% else %}
                             <li><a href="{% url 'sign_in' %}">Sign In</a></li>
@@ -28,7 +33,7 @@
             </div>
         </div>
     </header>
-    
+
     <!-- Main content wrapper -->
     <div class="content-wrapper">
         {% block content %}{% endblock %}
