--- a/attendnow/attendance/templates/attendance/home.html
+++ b/attendnow/attendance/templates/attendance/home.html
@@ -6,7 +6,7 @@
 <section id="home" class="section">
     <h1>Welcome to AttendNow</h1>
     <p>AttendNow simplifies attendance tracking through advanced facial recognition technology.</p>
-    <a href="{% url 'sign_in' %}" class="btn">Get Started</a>
+    <a href="{% url 'sign_in' %}" class="btn btn-primary btn-lg rounded-pill">Get Started</a>
 </section>
 
 <section id="about" class="section">
@@ -39,7 +39,7 @@
 <section id="get-started" class="section">
     <h1>Get Started</h1>
     <p>Ready to streamline your attendance process? Get started with AttendNow today and experience the convenience and efficiency of advanced facial recognition technology.</p>
-    <a href="{% url 'sign_up' %}" class="btn">Sign Up</a>
+    <a href="{% url 'sign_up' %}" class="btn btn-primary btn-lg rounded-pill">Sign Up</a>
 </section>
 
 <section id="contact" class="section">
